# src/email/account/account.dto.ts
@@ -1,0 +1,7 @@
+import { IsString } from "class-validator";
+
+
+export class AccountDto {
+    @IsString()
+    username: string
+}
